--- a/lamer.html
+++ b/lamer.html
@@ -18,6 +18,8 @@
     <a href="wandel.html" style="color: #d9e1e8; text-decoration: none;">WANDEL</a>
   </div>
   <h1 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center; padding-top: 3%;">Museumsnacht 2025</h1>
+  <h3 style="font-family: EB Garamond, serif; font-style: italic; color:#d9e1e8; text-align: center;">-Scheffelhalle Singen-</h3>
+  <br><br>
   <h2 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">II - La Mer</h2>
   <br>
   <br>
@@ -25,83 +27,94 @@
   <h4 style="font-family: EB Garamond, serif; font-style: italic; color:#d9e1e8; text-align: center;">-La Mer-</h4>
   <h3 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Lever de Soleil - Paul Gibson</h3>
   <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large;">
-    Benjamin Britten (1913–1976) war einer der bedeutendsten britischen Komponisten des 20. 
-    Jahrhunderts. Er prägte die englische Musiklandschaft mit Opern, Orchesterwerken, 
-    Kammermusik und Chorwerken, die gleichermaßen technisch anspruchsvoll wie emotional 
-    zugänglich sind. Britten hatte ein feines Gespür für Klangfarben und besondere 
-    Instrumentenkombinationen, was ihm eine unverwechselbare Stimme in der Musik seiner Zeit 
-    verlieh. 
-    Die Fanfare for St. Edmundsbury komponierte er 1959 anlässlich eines Festes an der Kathedrale 
-    von St. Edmundsbury in Bury St Edmunds. Die Fanfare ist für drei Trompeten geschrieben, die 
-    jeweils eigene harmonische Serien verwenden – so dass die Stimmen unabhängig voneinander 
-    wirken, sich aber in einem triumphalen Zusammenklang vereinen. Das Werk ist kurz, aber 
-    intensiv: Britten spielt mit Klangfarben, räumlicher Wirkung und dem Zusammenspiel der 
-    Trompeten. Besonders bemerkenswert ist der Aufbau, bei dem jede Trompete nacheinander ein 
-    Solo spielt, bevor alle zusammen die finale Harmonie bilden. 
-    Die Fanfare spiegelt sowohl den feierlichen Anlass als auch Brittens Sinn für Struktur und 
-    Klarheit wider. Sie zeigt, wie er selbst auf kleinstem Raum musikalische Spannung und festliche 
-    Erhabenheit erzeugen kann. Trotz ihrer Kürze hinterlässt das Stück einen bleibenden Eindruck 
-    durch die Kombination aus Präzision, Klangschönheit und einer subtilen, beinahe spielerischen 
-    Virtuosität. Heute wird die Fanfare regelmäßig bei festlichen Anlässen und Konzerten mit 
-    Blechbläsern aufgeführt und gilt als ein Beispiel für Brittens meisterhafte Handwerkskunst.
+    Seinerzeit in Belgien der bekannteste und populärste Komponist für Musik 
+    von kirchlichen Chorsätzen, über niveauvolle Stücke für Blasorchester, hin zu 
+    symphonischen Werken, war Paul Gilson (1865 – 1942). Letztere wurden von 
+    den Kritiken hochgeschätzt und so gelang Gilson auch früh der berufliche 
+    Aufstieg.
+    <br>
+    Seine viersätzigen Symphonischen Skizzen „La Mer“ basieren auf dem 
+    gleichnamigen Gedicht von Eddy Levis der darin vier Meeresbilder, den 
+    Sonnenaufgang (I), Lieder und Tänze der Matrosen (II), Dämmerung (III) und 
+    Sturm (IV), beschreibt. Der Musiker Gilson vermag es, diese gedichteten 
+    Bilder nicht weniger präzise wie in seiner literarischen Vorlage in ein Gewand 
+    aus musikalischen Themen, Klängen und Eindrücken zu kleiden.
+    <br> 
+    Wie auf dem Wasser glänzende, teils fast blendende Sonnenstrahlen wirkt der 
+    Beginn des zu hörenden Satzes, „Den neuen Morgen will es mir verkünden, 
+    wie es sinngemäß im Gedicht heißt. „Aurora zögert noch, von Träumen 
+    trunken“ bevor sie selbst, die Sonne sich erhebt. Gilson verstärkt den Klang 
+    des Orchesters und spielt mit den Farben der Instrumenten bevor es zum 
+    dynamischen und klanglichen Höhepunkt kommt: „Um triumphierend durch 
+    ihr Reich zu schreiten;/  Herab zur Flut fällt ihres Mantels Saum,/  …/  das 
+    Strahlenzepter hält sie in der Hand,/  Den Blick empor zum Himmelsthron 
+    gewandt./  Ein Heer erhebt sich unter ihren Füßen,/  Mit frohem Dank die 
+    Herrin zu begrüßen.“ 
   </p>
   <br>
   <br>
   <h4 style="font-family: EB Garamond, serif; font-style: italic; color:#d9e1e8; text-align: center;">-Don Quixote-</h4>
   <h3 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Quiteria and Basilio - Ludwig Minkus</h3>
   <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large;">
-    Ludwig Minkus (1826–1917) war ein österreichischer Komponist, der den größten Teil seines Lebens in Russland verbrachte.
-     Dort machte er Karriere als Ballettkomponist und arbeitete eng mit dem 
-     berühmten Choreografen Marius Petipa zusammen. Minkus schrieb zahlreiche Ballette,
-      von denen heute vor allem Don Quixote regelmäßig auf den Spielplänen steht. 
-      Das Ballett wurde 1869 in Moskau uraufgeführt und basiert lose auf 
-      Episoden aus Miguel de Cervantes’ berühmtem Roman.
-    Die Szene von Quiteria (oft auch Kitri genannt) und Basilio gehört zu den temperamentvollsten
-     und beliebtesten Teilen des Balletts. Minkus’ Musik ist geprägt von schwungvollen Rhythmen,
-      eingängigen Melodien und einem unverkennbaren spanischen Kolorit, 
-      das die tänzerische Handlung unterstützt. Sie besitzt eine Direktheit und Klarheit,
-       die das Publikum unmittelbar mitreißt – man spürt förmlich die Energie der Bühne.
-        Obwohl Minkus heute im Schatten größerer Namen steht, ist seine Musik ein 
-        Paradebeispiel für die Kunst des Balletts im 19. Jahrhundert: sie dient nicht nur als Begleitung,
-         sondern treibt das Bühnengeschehen kraftvoll voran und entfaltet dabei einen eigenen Charme.
+    Ludwig Minkus (1826–1917) war ein österreichischer Komponist, der den 
+    größten Teil seines Lebens in Russland verbrachte. Dort machte er Karriere 
+    als Ballettkomponist und arbeitete eng mit dem berühmten Choreografen 
+    Marius Petipa zusammen. Minkus schrieb zahlreiche Ballette, von denen heute vor allem <i>Don Quixote</i> regelmäßig auf den Spielplänen steht. Das Ballett wurde 
+    1869 in Moskau uraufgeführt und basiert lose auf Episoden aus Miguel de 
+    Cervantes gleichnamigen Roman.
+    <br>
+    Die Szene von Quiteria und Basilio gehört zu den temperamentvollsten und 
+    beliebtesten Teilen des Balletts. Minkus’ Musik ist geprägt von schwungvollen 
+    Rhythmen, eingängigen Melodien und einem unverkennbaren spanischen 
+    Kolorit, das die tänzerische Handlung unterstützt. Sie besitzt eine Direktheit 
+    und Klarheit, die das Publikum unmittelbar mitreißt – man spürt förmlich die 
+    Energie der Bühne. Obwohl Minkus heute im Schatten größerer Namen steht, 
+    ist seine Musik ein Paradebeispiel für die Kunst des Balletts im 19. Jahrhundert: 
+    sie dient nicht nur als Begleitung, sondern treibt das Bühnengeschehen 
+    kraftvoll voran und entfaltet dabei einen eigenen Charme. 
   </p>
   <br>
   <br>
   <h4 style="font-family: EB Garamond, serif; font-style: italic; color:#d9e1e8; text-align: center;">-Klavierkonzert N°2-</h4>
   <h3 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">II. Andante - Dimitri Shostakovich</h3>
   <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large;">
-    Dmitri Schostakowitsch (1906–1975) war eine der prägendsten Figuren des 20. Jahrhunderts. 
-    Unter dem sowjetischen Regime schrieb er Musik voller Zwiespälte: zwischen Anpassung und Widerstand,
-    Ironie und tiefer Trauer. Sein zweites Klavierkonzert entstand 1957 als Geschenk an seinen Sohn Maxim, 
-    der es zu seiner Abschlussprüfung spielte. Anders als viele seiner ernsten Werke ist dieses Konzert
-    insgesamt von heiterem, fast spielerischem Charakter.
-    Das Andante, der Mittelsatz, bildet jedoch das lyrische Herzstück des Werkes.
-     Über einem sanft schreitenden Klavier entfaltet sich eine weit gespannte Melodie,
-      die von den Streichern aufgenommen wird. Die Musik wirkt schlicht und innig,
-       beinahe wie ein romantisches Lied ohne Worte. Gerade diese Einfachheit macht 
-       ihre Wirkung aus: sie vermittelt Ruhe, Wärme und ein Gefühl von persönlicher Nähe.
-        Der Satz ist zu einem der beliebtesten Werke Schostakowitschs geworden und 
-        wird oft auch einzeln aufgeführt. Er zeigt eine Seite des Komponisten, 
-        die von stiller Schönheit geprägt ist – weit entfernt von den grellen Konflikten,
-         die man sonst mit seiner Musik verbindet.
+    Dmitri Schostakowitsch (1906–1975) war eine der prägendsten musikalischen 
+    Figuren des 20. Jahrhunderts. Unter dem sowjetischen Regime schrieb er 
+    Musik voller Zwiespalte: zwischen Anpassung und Widerstand, Ironie und 
+    tiefer Trauer. Sein zweites Klavierkonzert entstand 1957 als Geschenk an 
+    seinen Sohn Maxim, der es zu seiner Abschlussprüfung spielte. Anders als viele 
+    seiner ernsten Werke ist dieses Konzert insgesamt von heiterem, fast 
+    spielerischem Charakter.
+    <br>
+    Das Andante, der Mittelsatz, bildet jedoch das lyrische Herzstück des Werkes. 
+    Über einem sanft schreitenden Klavier entfaltet sich eine weit gespannte 
+    Melodie, die von den Streichern aufgenommen wird. Die Musik wirkt schlicht 
+    und innig, beinahe wie ein romantisches Lied ohne Worte. Gerade diese 
+    Einfachheit macht ihre Wirkung aus: sie vermittelt Ruhe, Wärme und ein 
+    Gefühl von Intimität. Der Satz ist zu einem der beliebtesten Werke 
+    Shostakovichs geworden und wird oft auch einzeln aufgeführt. Er zeigt eine 
+    Seite des Komponisten, die von stiller Schönheit geprägt ist – weit entfernt 
+    von den grellen Konflikten, die man sonst mit seiner Musik verbindet. 
   </p>
   <br>
   <br>
   <h4 style="font-family: EB Garamond, serif; font-style: italic; color:#d9e1e8; text-align: center;">-The Theory of Everything-</h4>
   <h3 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Chalkboard - Jóhann Jóhannson</h3>
   <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large; padding-bottom: 5%;">
-    Jóhann Jóhannsson (1969–2018) war ein isländischer Komponist, der Minimalismus, 
-    Elektronik und klassische Musik auf einzigartige Weise verband. In seiner Musik verbinden 
-    sich sparsame, wiederkehrende Strukturen mit subtilen Klangfarben zu meditativen, 
-    beinahe hypnotischen Atmosphären. Chalkboard ist ein besonders eindrucksvolles 
-    Beispiel dafür: Mit wenigen, sorgfältig gesetzten Klängen erschafft Jóhannsson 
-    eine ruhige, introspektive Stimmung. Die Töne schwingen über lange Strecken, 
-    wiederholen sich in minimalen Variationen und öffnen einen Raum, in dem Stille 
-    ebenso Teil der Musik wird wie der Klang selbst. Das Stück wirkt dabei 
-    fast filmisch: Es erzeugt Spannung und Erwartung, ohne je dramatische Effekte einzusetzen. 
-    Jóhannssons Musik zeigt, wie reduzierter Minimalismus emotionale Tiefe erzeugen kann, 
-    und lädt das Publikum ein, sich voll auf den Klang einzulassen, die Zeit wahrzunehmen 
-    und in der Ruhe Details zu entdecken, die erst bei genauerem Hinhören deutlich werden.
+    Jóhann Jóhannsson (1969–2018) war ein isländischer Komponist, der 
+    Minimalismus, Elektronik und klassische Musik auf einzigartige Weise 
+    verband. In seiner Musik vereinen sich sparsame, wiederkehrende Strukturen 
+    mit subtilen Klangfarben zu meditativen, beinahe hypnotischen Atmosphären. 
+    Chalkboard ist ein besonders eindrucksvolles Beispiel dafür: Mit wenigen, 
+    sorgfältig gesetzten Klängen erschafft Jóhannsson eine ruhige, introspektive 
+    Stimmung. Die Töne schwingen über lange Strecken, wiederholen sich in 
+    minimalen Variationen und öffnen einen Raum, in dem Stille ebenso Teil der 
+    Musik wird wie der Klang selbst. Das Stück wirkt dabei fast szenisch: Es 
+    erzeugt Spannung und Erwartung, ohne je dramatische Effekte einzusetzen. 
+    Jóhannssons Musik zeigt, wie reduzierter Minimalismus emotionale Tiefe 
+    erzeugen kann, und lädt das Publikum ein, sich voll auf den Klang einzulassen, 
+    die Zeit wahrzunehmen und in der Ruhe Details zu entdecken, die erst bei 
+    genauerem Hinhören deutlich werden. 
   </p>
   <br>
   <br>
@@ -118,5 +131,62 @@
       in dem alle Instrumente zusammenwirken, ohne je die Transparenz zu verlieren. Das Stück 
       verkörpert Ravels Fähigkeit, Klangfarben poetisch einzusetzen: Man spürt gleichzeitig die 
       Detailgenauigkeit und die erzählerische Dimension, die jeden Ton lebendig erscheinen lassen.
+  </p>
+  <br>
+  <br>
+  <br>
+  <h3 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Besetzung</h3>
+  <br>
+  <h5 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Violine</h5>
+  <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large; padding-bottom: 2%;">
+    Gabriele Haunz, Sara Ribeiro, Maike Kraus, Heike Leuenberger, Lisa Braun
+  </p>
+  <h5 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Viola</h5>
+  <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large; padding-bottom: 2%;">
+    Seweryn Noga, Clemens Nitschke
+  </p>
+  <h5 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Violoncello</h5>
+  <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large; padding-bottom: 2%;">
+    Elisabeth Wäschle, Lucas Götz, Matthias Wodsak
+  </p>
+  <h5 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Flöte</h5>
+  <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large; padding-bottom: 2%;">
+    Viviane Spannbauer, Lena Gollbach, Lisanne Knapp
+  </p>
+  <h5 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Klarinette</h5>
+  <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large; padding-bottom: 2%;">
+    Alexander Weiß, Franziska Graf, Aska Shima
+  </p>
+  <h5 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Fagott</h5>
+  <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large; padding-bottom: 2%;">
+    Marc Neininger
+  </p>
+  <h5 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Trompete</h5>
+  <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large; padding-bottom: 2%;">
+    Dennis Dörflinger, Kai Lupsina, Ruben Ade
+  </p>
+  <h5 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Waldhorn</h5>
+  <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large; padding-bottom: 2%;">
+    Sayaka Shima, Jochen Thomas
+  </p>
+  <h5 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Posaune</h5>
+  <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large; padding-bottom: 2%;">
+    Patrick Sonntag, Bastian Bart
+  </p>
+  <h5 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Klavier</h5>
+  <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large; padding-bottom: 2%;">
+    Ruben Ade
+  </p>
+  <h5 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Harfe</h5>
+  <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large; padding-bottom: 2%;">
+    Benita Weber
+  </p>
+  <h5 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Percussion</h5>
+  <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large; padding-bottom: 2%;">
+    Yuhmu Shima, Felix Lehmann, Jan Leidoldt
+  </p>
+  <h5 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Dirigat</h5>
+  <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large; padding-bottom: 5%;">
+    Magnus Götz
   </p>
 </body>
