--- a/wandel.html
+++ b/wandel.html
@@ -18,6 +18,8 @@
     <a href="tides.html" style="color: #d9e1e8; text-decoration: none;">TIDES</a>
   </div>
   <h1 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center; padding-top: 3%;">Museumsnacht 2025</h1>
+  <h3 style="font-family: EB Garamond, serif; font-style: italic; color:#d9e1e8; text-align: center;">-Scheffelhalle Singen-</h3>
+  <br><br>
   <h2 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">IV - Wandel</h2>
   <br>
   <br>
@@ -25,90 +27,128 @@
   <h4 style="font-family: EB Garamond, serif; font-style: italic; color:#d9e1e8; text-align: center;">-Suite Antique-</h4>
   <h3 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">I. prelude - John Rutter</h3>
   <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large;">
-    Ola Gjeilo (*1978) ist ein norwegisch-amerikanischer Komponist, der besonders für seine Chormusik bekannt ist.
-    Er verbindet klassische Chortraditionen mit modernen Harmonien, Jazz-Elementen und filigranen Klangschichten.
-    Sacred Heart ist ein spirituelles Werk von ruhiger, meditativer Schönheit. Die Stimmen fließen
-    sanft ineinander, lange, warme Akkorde tragen die Melodie, während subtile Harmoniewechsel
-    ein Gefühl von innerer Bewegung und Tiefe erzeugen. Gjeilos Musik wirkt gleichzeitig modern
-    und zeitlos: Die harmonische Klarheit schafft Transparenz, während die komplexen Klangschichtungen
-    emotionale Tiefe verleihen. Das Stück lädt das Publikum ein, innezuhalten, den Klang bewusst wahrzunehmen
-    und sich auf eine fast kontemplative Erfahrung einzulassen. Es vermittelt ein Gefühl 
-    von Geborgenheit und Erhabenheit, das sich über den Raum legt, und zeigt, wie moderne Chortradition
-    spirituelle Wirkung entfalten kann, ohne auf äußere Effekte angewiesen zu sein.
+    John Rutter (*1945) ist ein britischer Komponist und Dirigent, der für seine 
+    Chorwerke und geistlichen Kompositionen bekannt ist. Er hat zahlreiche 
+    Werke geschrieben und ist insbesondere für seine Arbeit mit dem Cambridge 
+    Singers bekannt.
+    <br>
+    Rutters "Suite antique" ist ein Werk, das speziell für eine Aufführung mit dem 
+    Flötisten Duke Dobing und den „London Baroque Soloists“ beim Cookham 
+    Festival 1979 komponiert wurde. Die Suite ist in der Tradition und für die 
+    Besetzung von Johann Sebastian Bachs fünftem „Brandenburgischen 
+    Konzert“ geschrieben. Sie entführt uns in die Welt der Barockmusik. Mit ihrer 
+    eleganten Verbindung von klassischen Formen und modernen Elementen ist 
+    diese Suite ein Meisterwerk der britischen Musikszene.
+    <br>
+    Das Prelude eröffnet die Suite mit einer lebendigen und fröhlichen 
+    Atmosphäre. Die Flöte und die Streicher tanzen miteinander und schaffen eine 
+    Leichtigkeit, die den Hörer sofort in den Bann zieht. Die Musik ist geprägt von 
+    einer gewissen Unbeschwertheit und Freude, die typisch für die Barockzeit ist. 
+    <br>
+    ...
   </p>
   <br>
   <br>
   <h4 style="font-family: EB Garamond, serif; font-style: italic; color:#d9e1e8; text-align: center;">-Concerto Gross Op. 1 N°9-</h4>
   <h3 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">I. Allegro - Pietro Locatelli</h3>
   <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large;">
-    Ludwig Minkus (1826–1917) war ein österreichischer Komponist, der den größten Teil seines Lebens in Russland verbrachte.
-     Dort machte er Karriere als Ballettkomponist und arbeitete eng mit dem 
-     berühmten Choreografen Marius Petipa zusammen. Minkus schrieb zahlreiche Ballette,
-      von denen heute vor allem Don Quixote regelmäßig auf den Spielplänen steht. 
-      Das Ballett wurde 1869 in Moskau uraufgeführt und basiert lose auf 
-      Episoden aus Miguel de Cervantes’ berühmtem Roman.
-    Die Szene von Quiteria (oft auch Kitri genannt) und Basilio gehört zu den temperamentvollsten
-     und beliebtesten Teilen des Balletts. Minkus’ Musik ist geprägt von schwungvollen Rhythmen,
-      eingängigen Melodien und einem unverkennbaren spanischen Kolorit, 
-      das die tänzerische Handlung unterstützt. Sie besitzt eine Direktheit und Klarheit,
-       die das Publikum unmittelbar mitreißt – man spürt förmlich die Energie der Bühne.
-        Obwohl Minkus heute im Schatten größerer Namen steht, ist seine Musik ein 
-        Paradebeispiel für die Kunst des Balletts im 19. Jahrhundert: sie dient nicht nur als Begleitung,
-         sondern treibt das Bühnengeschehen kraftvoll voran und entfaltet dabei einen eigenen Charme.
+    Pietro Locatelli (1695-1764) war ein italienischer Violinist und Komponist des 
+    Barock und Schüler von Arcangelo Corelli. Sein Stil wurde von der 
+    italienischen und französischen Musiktradition beeinflusst. Er war bekannt für 
+    seine technischen Fähigkeiten auf der Violine und seine Kompositionen, die 
+    oft komplexe und innovative Elemente enthielten. Seine Musik ist geprägt von 
+    der Leidenschaft und Expressivität, die typisch für die Barockzeit war. Dies 
+    zeigt er auch im Concerto Grosso Op. 1 No. 9.
+    <br>
+    Der erste Satz, Allegro, ist ein Feuerwerk an Energie und Leidenschaft, das die 
+    Zuhörer von Anfang an in den Bann zieht. Die Solisten und das Orchester tanzen miteinander in einem komplexen Rhythmus, der die technische Brillanz 
+    und die musikalische Ausdruckskraft der Musiker unter Beweis stellt. Locatellis 
+    Musik begeistert die Zuhörer und bewegt sie so, dass sie sich auch wunderbar 
+    in ein breitgefächertes Konzertprogramm integriert.
   </p>
   <br>
   <br>
   <h4 style="font-family: EB Garamond, serif; font-style: italic; color:#d9e1e8; text-align: center;">-Suite Antique-</h4>
   <h3 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">III. Aria - John Rutter</h3>
   <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large;">
-    Dmitri Schostakowitsch (1906–1975) war eine der prägendsten Figuren des 20. Jahrhunderts. 
-    Unter dem sowjetischen Regime schrieb er Musik voller Zwiespälte: zwischen Anpassung und Widerstand,
-    Ironie und tiefer Trauer. Sein zweites Klavierkonzert entstand 1957 als Geschenk an seinen Sohn Maxim, 
-    der es zu seiner Abschlussprüfung spielte. Anders als viele seiner ernsten Werke ist dieses Konzert
-    insgesamt von heiterem, fast spielerischem Charakter.
-    Das Andante, der Mittelsatz, bildet jedoch das lyrische Herzstück des Werkes.
-     Über einem sanft schreitenden Klavier entfaltet sich eine weit gespannte Melodie,
-      die von den Streichern aufgenommen wird. Die Musik wirkt schlicht und innig,
-       beinahe wie ein romantisches Lied ohne Worte. Gerade diese Einfachheit macht 
-       ihre Wirkung aus: sie vermittelt Ruhe, Wärme und ein Gefühl von persönlicher Nähe.
-        Der Satz ist zu einem der beliebtesten Werke Schostakowitschs geworden und 
-        wird oft auch einzeln aufgeführt. Er zeigt eine Seite des Komponisten, 
-        die von stiller Schönheit geprägt ist – weit entfernt von den grellen Konflikten,
-         die man sonst mit seiner Musik verbindet.
+    …  Die Aria ist ein sanftes und lyrisches Stück, das die Schönheit der 
+    menschlichen Stimme in den Instrumenten widerspiegelt. Die Melodie fließt 
+    wie ein ruhiger Fluss und schafft eine Atmosphäre der Ruhe und Besinnung. 
+    Der Satz ist ein Moment der Stille und Kontemplation innerhalb der Suite.
+    <br>  
+    … 
   </p>
   <br>
   <br>
   <h4 style="font-family: EB Garamond, serif; font-style: italic; color:#d9e1e8; text-align: center;">-First Man-</h4>
   <h3 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Docking Waltz - Justin Hurwitz</h3>
   <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large; padding-bottom: 5%;">
-    Justin Hurwitz (*1985) ist ein US-amerikanischer Komponist, der vor allem für seine 
-    Filmmusik bekannt ist, darunter die Werke zu La La Land und First Man. 
-    Docking Waltz stammt aus der Filmmusik zu Interstellar und ist ein Walzer mit 
-    einem schwebenden, fast schwerelosen Charakter. Der Dreiertakt vermittelt 
-    Bewegung und Eleganz, die harmonisch mit Spannung und Erwartung spielen – 
-    passend zu den Szenen des Films, in denen Raumschiffe präzise manövrieren. 
-    Hurwitz kombiniert traditionelle walzerartige Rhythmen mit modernen Klangfarben 
-    und orchestralen Effekten, sodass die Musik zugleich vertraut und futuristisch wirkt. 
-    Das Stück strahlt eine gewisse Leichtigkeit aus, obwohl es inhaltlich mit dem Thema 
-    Raumfahrt und Präzision verbunden ist. Durch das subtile Spiel von Rhythmus und 
-    Harmonie erzeugt Hurwitz eine musikalische Spannung, die den Zuhörer in den Moment 
-    hineinzieht und das Gefühl des Schwebens und der filigranen Balance hörbar macht – 
-    eine Mischung aus Eleganz, Dynamik und filmischer Imagination.
+    Justin Hurwitz (*1985) ist ein US-amerikanischer Komponist, der vor allem für 
+    seine Filmmusik bekannt ist, darunter die Werke zu „La La Land“. <i>Docking 
+    Waltz</i> stammt aus der Filmmusik zu „First Man“ und ist ein Walzer mit einem 
+    schwebenden, fast schwerelosen Charakter. Der Dreiertakt vermittelt 
+    Bewegung und Eleganz, die harmonisch mit Spannung und Erwartung spielen – passend zu den Szenen des Films, in denen Raumschiffe präzise 
+    manövrieren. Hurwitz kombiniert walzerartige Rhythmen mit modernen 
+    Klangfarben und orchestralen Effekten, sodass die Musik zugleich vertraut 
+    und futuristisch wirkt. Das Stück strahlt eine gewisse Leichtigkeit aus, obwohl 
+    es inhaltlich mit dem Thema Raumfahrt und Präzision verbunden ist. Durch 
+    das subtile Spiel von Rhythmus und Harmonie erzeugt Hurwitz eine 
+    musikalische Spannung, die den Zuhörer in den Moment hineinzieht und das 
+    Gefühl des Schwebens und der filigranen Balance hörbar macht – eine 
+    Mischung aus Eleganz, Dynamik und filmischer Imagination. 
   </p>
   <br>
   <br>
   <h4 style="font-family: EB Garamond, serif; font-style: italic; color:#d9e1e8; text-align: center;">-Suite Antique-</h4>
   <h3 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">V. Chanson - John Rutter</h3>
   <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large; padding-bottom: 5%;">
-    Maurice Ravel (1875–1937) gilt als einer der Meister der französischen Impression. 
-    Seine Musik besticht durch klare Strukturen, raffinierte Orchestrierung und leuchtende Klangfarben.
-     Die Suite Ma Mère l’Oye („Mutter Gans“) komponierte Ravel zunächst für Klavier 
-     vierhändig und instrumentierte sie später für Orchester. Das Finale, Le Jardin féerique („Der Feengarten“), 
-     entfaltet eine märchenhafte, schwebende Atmosphäre. Ravel nutzt sanft schwebende Harmonien, 
-     delikate Instrumentalfarben und dynamische Steigerungen, um eine Welt voller Zauber und Leichtigkeit
-      zu erschaffen. Der Zuhörer wird von einem leisen Beginn zu einem funkelnden Höhepunkt getragen, 
-      in dem alle Instrumente zusammenwirken, ohne je die Transparenz zu verlieren. Das Stück 
-      verkörpert Ravels Fähigkeit, Klangfarben poetisch einzusetzen: Man spürt gleichzeitig die 
-      Detailgenauigkeit und die erzählerische Dimension, die jeden Ton lebendig erscheinen lassen.
+    …  Rutters Schlusssatz ist ein fröhliches und lebendiges Stück, das die Suite 
+    mit einer Note der Freude und des Feierns abschließt. Die Musik ist geprägt 
+    von einer gewissen Leichtigkeit und Unbeschwertheit, die den Hörer zum 
+    Lächeln bringt. Die Chanson ist ein gelungener Abschluss der Suite und 
+    vermag es einen nachhaltigen Eindruck beim Publikum zu hinterlassen.
+  </p>
+  <br>
+  <br>
+  <br>
+
+  
+  <h3 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Besetzung</h3>
+  <br>
+  <h5 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Violine</h5>
+  <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large; padding-bottom: 2%;">
+    Gabriele Haunz, Sara Ribeiro, Maike Kraus, Heike Leuenberger, Lisa Braun
+  </p>
+  <h5 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Viola</h5>
+  <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large; padding-bottom: 2%;">
+    Seweryn Noga, Clemens Nitschke
+  </p>
+  <h5 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Violoncello</h5>
+  <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large; padding-bottom: 2%;">
+    Elisabeth Wäschle, Lucas Götz, Matthias Wodsak
+  </p>
+  <h5 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Flöte</h5>
+  <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large; padding-bottom: 2%;">
+    Viviane Spannbauer, Lena Gollbach, Lisanne Knapp
+  </p>
+  <h5 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Klarinette</h5>
+  <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large; padding-bottom: 2%;">
+    Alexander Weiß, Franziska Graf, Aska Shima
+  </p>
+  <h5 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Fagott</h5>
+  <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large; padding-bottom: 2%;">
+    Marc Neininger
+  </p>
+  <h5 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Klavier</h5>
+  <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large; padding-bottom: 2%;">
+    Ruben Ade
+  </p>
+  <h5 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Percussion</h5>
+  <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large; padding-bottom: 2%;">
+    Yuhmu Shima, Felix Lehmann, Jan Leidoldt
+  </p>
+  <h5 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Dirigat</h5>
+  <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large; padding-bottom: 5%;">
+    Magnus Götz
   </p>
 </body>
