--- a/air.html
+++ b/air.html
@@ -18,91 +18,129 @@
     <a href="wandel.html" style="color: #d9e1e8; text-decoration: none;">WANDEL</a>
   </div>
   <h1 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center; padding-top: 3%;">Museumsnacht 2025</h1>
+  <h3 style="font-family: EB Garamond, serif; font-style: italic; color:#d9e1e8; text-align: center;">-Scheffelhalle Singen-</h3>
+  <br><br>
   <h2 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">I - Air</h2>
   <br>
   <br>
   <br>
   <h3 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Fanfare for St. Edmundsbury - Benjamin Britten</h3>
   <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large;">
-    Benjamin Britten (1913–1976) war einer der bedeutendsten britischen Komponisten des 20. 
-    Jahrhunderts. Er prägte die englische Musiklandschaft mit Opern, Orchesterwerken, 
-    Kammermusik und Chorwerken, die gleichermaßen technisch anspruchsvoll wie emotional 
-    zugänglich sind. Britten hatte ein feines Gespür für Klangfarben und besondere 
-    Instrumentenkombinationen, was ihm eine unverwechselbare Stimme in der Musik seiner Zeit 
-    verlieh. 
-    Die Fanfare for St. Edmundsbury komponierte er 1959 anlässlich eines Festes an der Kathedrale 
-    von St. Edmundsbury in Bury St Edmunds. Die Fanfare ist für drei Trompeten geschrieben, die 
-    jeweils eigene harmonische Serien verwenden – so dass die Stimmen unabhängig voneinander 
-    wirken, sich aber in einem triumphalen Zusammenklang vereinen. Das Werk ist kurz, aber 
-    intensiv: Britten spielt mit Klangfarben, räumlicher Wirkung und dem Zusammenspiel der 
-    Trompeten. Besonders bemerkenswert ist der Aufbau, bei dem jede Trompete nacheinander ein 
-    Solo spielt, bevor alle zusammen die finale Harmonie bilden. 
-    Die Fanfare spiegelt sowohl den feierlichen Anlass als auch Brittens Sinn für Struktur und 
-    Klarheit wider. Sie zeigt, wie er selbst auf kleinstem Raum musikalische Spannung und festliche 
-    Erhabenheit erzeugen kann. Trotz ihrer Kürze hinterlässt das Stück einen bleibenden Eindruck 
-    durch die Kombination aus Präzision, Klangschönheit und einer subtilen, beinahe spielerischen 
-    Virtuosität. Heute wird die Fanfare regelmäßig bei festlichen Anlässen und Konzerten mit 
-    Blechbläsern aufgeführt und gilt als ein Beispiel für Brittens meisterhafte Handwerkskunst.
+    Benjamin Britten (1913–1976) war einer der bedeutendsten britischen 
+Komponisten des 20. Jahrhunderts. Er prägte die englische Musiklandschaft 
+mit Opern, Orchesterwerken, Kammermusik und Chorwerken, die 
+gleichermaßen technisch anspruchsvoll wie emotional zugänglich sind. 
+Britten´s feines Gespür für Klangfarben und Instrumentenkombinationen, 
+verlieh ihm eine prägende Rolle in der Musik seiner Zeit.
+<br>  
+Die Fanfare komponierte er 1959 anlässlich eines Festes an der Kathedrale von 
+Bury St Edmunds. Sie ist für drei Trompeten geschrieben, die jeweils eigene 
+harmonische Serien verwenden – so dass die Stimmen unabhängig 
+voneinander wirken, sich aber dann in einem triumphalen Zusammenklang 
+vereinen. Das Werk ist kurz, aber intensiv: Britten spielt mit Klangfarben, 
+räumlicher Wirkung und dem Zusammenspiel der Trompeten. Besonders 
+bemerkenswert ist der Aufbau, bei dem jeder Trompeter nacheinander sein 
+Solo spielt, bevor alle Themen gemeinsam die finalen Harmonien bilden. Das 
+Werk spiegelt sowohl den feierlichen Anlass als auch Brittens Sinn für Struktur 
+und Klarheit wider. Das Stück hinterlässt, durch die Kombination aus 
+Präzision, Klangschönheit und einer subtilen, beinahe spielerischen 
+Virtuosität, einen bleibenden Eindruck. Heute wird die Fanfare regelmäßig bei 
+festlichen Anlässen und Konzerten aufgeführt und gilt als ein Beispiel für 
+Brittens meisterhafte Handwerkskunst. 
   </p>
   <br>
   <br>
   <h4 style="font-family: EB Garamond, serif; font-style: italic; color:#d9e1e8; text-align: center;">-Music for the Funeral of Queen Mary-</h4>
   <h3 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">March and Canzona - Henry Purcell</h3>
   <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large;">
-    Henry Purcell (1659–1695) gilt als der bedeutendste englische Komponist des Barock. Schon zu 
-Lebzeiten trug er den Beinamen „Orpheus Britannicus“, weil es ihm gelang, die strenge 
-kontrapunktische Kunst seiner Zeit mit einer einzigartigen Ausdruckskraft zu verbinden. Purcell 
-wirkte als Organist an der Westminster Abbey und am Hof der Könige Karl II. und Jakob II. 
-Die „Music for the Funeral of Queen Mary“ entstand 1695 für die Trauerfeier der jung 
-verstorbenen Königin Maria II. Purcell selbst sollte nur wenige Monate später sterben und mit 
-dieser Musik zu Grabe getragen werden. 
-Das Werk besteht aus einem „March“, mehreren „Canzonas“ und einem Choralsatz. Der 
-berühmte Trauermarsch mit seinem ernsten Trommelrhythmus und den majestätischen 
-Posaunenakkorden entfaltet eine würdige, fast archaische Schwere. Gleichzeitig spürt man eine 
-tiefe Menschlichkeit: Purcells Musik bleibt nie nur Repräsentation, sondern berührt unmittelbar. 
-Die eindringliche Wirkung dieser Töne ist bis heute ungebrochen – so sehr, dass sie in späterer 
-Zeit, etwa in Stanley Kubricks Film A Clockwork Orange, erneut eingesetzt wurde. Die Musik zeigt 
-Purcells Meisterschaft, mit schlichten Mitteln eine Atmosphäre von Würde, Trauer und 
-Erhabenheit zu schaffen.
+    Henry Purcell (1659–1695) ist wohl der bekannteste englische Komponist des 
+Barock. Schon zu Lebzeiten trug er den Beinamen „Orpheus Britannicus“, weil 
+es ihm gelang, die strenge kontrapunktische Kunst seiner Zeit mit einer 
+einzigartigen Ausdruckskraft zu verbinden. Purcell wirkte als Organist an der 
+Westminster Abbey und am Hof der Könige Karl II. und Jakob II. Die „Music for the Funeral of Queen Mary“ entstand 1695 für die Trauerfeier 
+der jung verstorbenen Königin Maria II. Purcell selbst sollte nur wenige 
+Monate später sterben und mit dieser Musik zu Grabe getragen werden. Das 
+Werk besteht neben den beiden umrahmenden Bläsersätzen „March“ und 
+„Canzona“ im Ursprung aus drei Choralsätzen. Der berühmte Trauermarsch 
+mit seinem bedrohlichen Trommelrhythmus und den erhabenen Harmonien 
+entfaltet eine würdige, fast archaische Schwere. Die Canzona hingegen hat 
+einen leichteren, eilenden Charakter. Die durch Purcells geschickt geordneten 
+fugenhaften Einsätze und sich antwortenden Einwürfe wirken gleichwohl 
+fliehend wie statisch. Gleichzeitig spürt man in beiden Sätzen eine tiefe 
+Menschlichkeit: Purcells Musik bleibt nicht fassadenhafte Repräsentation, sie 
+berührt unmittelbar. Die eindringliche Wirkung dieser Töne ist bis heute so 
+sehr ungebrochen, dass sie etwa in Stanley Kubricks Film „A Clockwork 
+Orange“, eindrucksvoll Verwendung fand. 
   </p>
   <br>
   <br>
   <h4 style="font-family: EB Garamond, serif; font-style: italic; color:#d9e1e8; text-align: center;">-Orchestersuite N°3; BWV 1068-</h4>
   <h3 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Air - Johann Sebastian Bach</h3>
   <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large;">
-    Johann Sebastian Bach (1685–1750) war Thomaskantor in Leipzig und gilt heute als der 
-Inbegriff barocker Musik. Seine Werke vereinen kontrapunktische Kunstfertigkeit mit tiefer 
-Emotionalität. Die dritte Orchestersuite in D-Dur komponierte er vermutlich um 1730 für das 
-Leipziger Collegium Musicum, ein Ensemble aus Berufsmusikern und Studenten. Der zweite 
-Satz dieser Suite, das berühmte „Air“, hebt sich durch seine besondere Ruhe und Kantabilität 
-hervor. 
-Über einer ruhigen, gleichmäßig schreitenden Basslinie entfaltet sich eine weiche, fast 
-gesangliche Melodie, die in langen Bögen getragen wird. Die Schlichtheit des Satzes ist seine 
-größte Stärke: ohne Virtuosität oder äußere Effekte entfaltet er eine Atmosphäre von 
-vollkommener Balance. Im 19. Jahrhundert veröffentlichte der Geiger August Wilhelmj eine 
-Bearbeitung, bei der die Melodie ausschließlich auf der tiefsten Saite der Violine gespielt wird – 
-daher der populäre Name „Air auf der G-Saite“. Diese Version machte das Stück weltweit 
-berühmt. Heute gehört es zu den meistgespielten Werken Bachs, sei es im Konzertsaal, bei 
-festlichen Anlässen oder in populären Bearbeitungen. Es verkörpert eine stille, zeitlose 
-Schönheit, die Generationen von Hörerinnen und Hörern berührt.
+    Johann Sebastian Bach (1685–1750)‘s Werke gelten heute als der Inbegriff 
+barocker Musik. Seine Werke vereinen kontrapunktische Kunstfertigkeit mit 
+tiefer Emotionalität. Die dritte Orchestersuite in D-Dur komponierte er 
+vermutlich um 1730 für das Leipziger Collegium Musicum, ein Ensemble aus 
+Berufsmusikern und Studenten. Der zweite Satz dieser Suite hebt sich durch 
+seine besondere Ruhe und Kantabilität hervor. Über eine gleichmäßig 
+schreitenden Basslinie entfaltet sich eine weiche Melodie, die in langen Bögen 
+getragen wird. Die Schlichtheit des Satzes ist seine größte Stärke: ohne 
+„barocke Schnörkel“ oder äußere Effekte entfaltet er eine Atmosphäre von 
+vollkommener Balance. Im 19. Jahrhundert veröffentlichte der Geiger August 
+Wilhelmj eine Bearbeitung, bei der die Melodie ausschließlich auf der tiefsten 
+Saite der Violine gespielt wird – daher der populäre Name „Air auf der G
+Saite“. Heute gehört es zu den meistgespielten Werken Bachs, sei es im 
+Konzertsaal, zu diversen Anlässen oder in populären Bearbeitungen. Es 
+verkörpert eine stille, zeitlose Schönheit, die Generationen von Hörerinnen 
+und Hörern berührt. Die Bearbeitung für Blechbläserensemble hebt besonders 
+das sangliche, der menschlichen Stimme anmutende Thema hervor. 
   </p>
   <br>
   <br>
   <h3 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Moon River - Henry Mancini/Jacob Collier</h3>
   <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large; padding-bottom: 5%;">
-    Henry Mancini (1924–1994) war einer der großen Filmkomponisten Hollywoods. Er prägte das 
-Klangbild vieler Klassiker, darunter die Titelmelodie zu The Pink Panther oder die Filmmusik zu 
-Breakfast at Tiffany’s von 1961. Für diesen Film schrieb er zusammen mit Texter Johnny Mercer 
-das Lied Moon River, das von Audrey Hepburn im Film selbst gesungen wird. Die einfache, 
-schwebende Melodie und die sehnsuchtsvollen Worte trafen sofort den Nerv der Zeit. Das Lied 
-gewann sowohl den Oscar als auch den Grammy und entwickelte sich zu einem Evergreen. 
-Sechzig Jahre später widmete sich der britische Musiker Jacob Collier (*1994) dem Klassiker. 
-Collier ist für seine experimentelle Harmonik und seine komplexen vokalen Arrangements 
-bekannt. In seiner Fassung von Moon River erklingen die vertrauten Töne in völlig neuem 
-Gewand: Collier legt Schicht um Schicht von Stimmen und Akkorden übereinander, so dass sich 
-ein sphärisches, fast unendliches Klangfeld öffnet. Die ursprüngliche Intimität des Liedes bleibt 
-erhalten, doch zugleich wirkt die Musik wie in kosmische Weite ausgefächert. So treffen die 
-Nostalgie der 1960er Jahre und die Klangfantasie des 21. Jahrhunderts aufeinander – eine 
-Begegnung zwischen Tradition und Innovation.
+    Henry Mancini (1924–1994) war einer der großen Filmkomponisten 
+Hollywoods. Er prägte das Klangbild vieler Klassiker, darunter die 
+Titelmelodie zu „The Pink Panther“ und die Filmmusik zu „Breakfast at 
+Tiffany’s“ von 1961. Für Letzteren schrieb er zusammen mit Texter Johnny 
+Mercer das Lied „Moon River“, das im Film von Audrey Hepburn selbst 
+gesungen wird. Die einfache, schwebende Melodie und die sehnsuchtsvollen 
+Worte trafen sofort den Nerv der Zeit. Das Lied gewann sowohl den Oscar als 
+auch den Grammy und entwickelte sich zu einem Evergreen. Sechzig Jahre 
+später widmete sich der britische Musiker Jacob Collier (*1994) dem Klassiker. 
+Collier ist für seine experimentelle Harmonik und seine komplexen vokalen 
+Arrangements bekannt. In seiner Fassung von Moon River erklingen die 
+vertrauten Töne in völlig neuem Gewand: Collier legt Schicht um Schicht von 
+Stimmen und Akkorden übereinander, so dass sich ein sphärisches, fast 
+unendliches Klangfeld öffnet. Die ursprüngliche Intimität des Liedes bleibt 
+erhalten und zugleich wirkt die Musik wie in kosmische Weite ausgefächert. So 
+treffen die Nostalgie der 1960er Jahre und die Klangfantasie des 21. 
+Jahrhunderts aufeinander, eine Begegnung von Tradition und Innovation.
   </p>
+  <br>
+  <br>
+  <br>
+  <h3 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Besetzung</h3>
+  <br>
+  <h5 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Trompete</h5>
+  <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large; padding-bottom: 2%;">
+    Dennis Dörflinger, Kai Lupsina, Ruben Ade
+  </p>
+  <h5 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Waldhorn</h5>
+  <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large; padding-bottom: 2%;">
+    Sayaka Shima, Jochen Thomas
+  </p>
+  <h5 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Posaune</h5>
+  <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large; padding-bottom: 2%;">
+    Patrick Sonntag, Bastian Bart
+  </p>
+  <h5 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Pauken</h5>
+  <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large; padding-bottom: 2%;">
+    Yuhmu Shima
+  </p>
+  <h5 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Dirigat</h5>
+  <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large; padding-bottom: 5%;">
+    Magnus Götz
+  </p>
+  
 </body>
