--- a/tides.html
+++ b/tides.html
@@ -18,92 +18,151 @@
     <a href="wandel.html" style="color: #d9e1e8; text-decoration: none;">WANDEL</a>
   </div>
   <h1 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center; padding-top: 3%;">Museumsnacht 2025</h1>
+  <h3 style="font-family: EB Garamond, serif; font-style: italic; color:#d9e1e8; text-align: center;">-Scheffelhalle Singen-</h3>
+  <br><br>
   <h2 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">III - Tides</h2>
   <br>
   <br>
   <br>
   <h3 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Sacred Heart (Ubi Caritas III) - Ola Gjeilo</h3>
   <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large;">
-    Ola Gjeilo (*1978) ist ein norwegisch-amerikanischer Komponist, der besonders für seine Chormusik bekannt ist.
-    Er verbindet klassische Chortraditionen mit modernen Harmonien, Jazz-Elementen und filigranen Klangschichten.
-    Sacred Heart ist ein spirituelles Werk von ruhiger, meditativer Schönheit. Die Stimmen fließen
-    sanft ineinander, lange, warme Akkorde tragen die Melodie, während subtile Harmoniewechsel
-    ein Gefühl von innerer Bewegung und Tiefe erzeugen. Gjeilos Musik wirkt gleichzeitig modern
-    und zeitlos: Die harmonische Klarheit schafft Transparenz, während die komplexen Klangschichtungen
-    emotionale Tiefe verleihen. Das Stück lädt das Publikum ein, innezuhalten, den Klang bewusst wahrzunehmen
-    und sich auf eine fast kontemplative Erfahrung einzulassen. Es vermittelt ein Gefühl 
-    von Geborgenheit und Erhabenheit, das sich über den Raum legt, und zeigt, wie moderne Chortradition
-    spirituelle Wirkung entfalten kann, ohne auf äußere Effekte angewiesen zu sein.
+    Ola Gjeilo (*1978) ist ein norwegisch-amerikanischer Komponist, der 
+    besonders für seine Chormusik bekannt ist. Er verbindet klassische 
+    Chortraditionen mit modernen Harmonien, Jazz-Elementen und filigranen 
+    Klangschichten. Sacred Heart ist ein spirituelles Werk von ruhiger, meditativer 
+    Schönheit. Die Stimmen fließen sanft ineinander, lange, warme Akkorde tragen 
+    die Melodie, während subtile Charakterwechsel ein Gefühl von innerer 
+    Bewegung und Tiefe erzeugen. Gjeilos Musik wirkt gleichzeitig modern und 
+    zeitlos: Die melodische Klarheit schafft Transparenz, während die komplexen 
+    Harmonien emotionale Tiefe verleihen. Das Stück lädt das Publikum ein, 
+    innezuhalten, den Klang bewusst wahrzunehmen und sich auf eine fast 
+    kontemplative Erfahrung einzulassen. Es vermittelt ein Gefühl von 
+    Geborgenheit und Erhabenheit, das sich über den Raum legt, und zeigt, wie 
+    moderne Chormusik spirituelle Wirkung entfalten kann, ohne auf äußere 
+    Effekte angewiesen zu sein.
   </p>
   <br>
   <br>
   <h3 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Cuatro Vientos - Danit Teubig</h3>
   <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large;">
-    Ludwig Minkus (1826–1917) war ein österreichischer Komponist, der den größten Teil seines Lebens in Russland verbrachte.
-     Dort machte er Karriere als Ballettkomponist und arbeitete eng mit dem 
-     berühmten Choreografen Marius Petipa zusammen. Minkus schrieb zahlreiche Ballette,
-      von denen heute vor allem Don Quixote regelmäßig auf den Spielplänen steht. 
-      Das Ballett wurde 1869 in Moskau uraufgeführt und basiert lose auf 
-      Episoden aus Miguel de Cervantes’ berühmtem Roman.
-    Die Szene von Quiteria (oft auch Kitri genannt) und Basilio gehört zu den temperamentvollsten
-     und beliebtesten Teilen des Balletts. Minkus’ Musik ist geprägt von schwungvollen Rhythmen,
-      eingängigen Melodien und einem unverkennbaren spanischen Kolorit, 
-      das die tänzerische Handlung unterstützt. Sie besitzt eine Direktheit und Klarheit,
-       die das Publikum unmittelbar mitreißt – man spürt förmlich die Energie der Bühne.
-        Obwohl Minkus heute im Schatten größerer Namen steht, ist seine Musik ein 
-        Paradebeispiel für die Kunst des Balletts im 19. Jahrhundert: sie dient nicht nur als Begleitung,
-         sondern treibt das Bühnengeschehen kraftvoll voran und entfaltet dabei einen eigenen Charme.
+    „Aliento“ (dt.: Atem) heißt das Album, aus dem das Lied Cuatro Vientos 
+    stammt. Danit Treubig, eine junge, recht unbekannte, spanischsprachige 
+    Künstlerin unserer Zeit, arbeitet in ihren Liedern oft mit Geräuschen, die Titel 
+    und Handlung stützen. Durch harmonische Einfachheit, viele Wiederholungen 
+    und klare musikalische Bausteine, wirkt ihre Musik fast hypnotisch. 
+    Gleichzeitig wird sie durch stetige Veränderung der Stimmen und des 
+    Gesamtklanges nie langweilig.
+    <br>
+    Cuatro Vientos erzählt von den „Vier Winden“ und ihren Gaben: 
+    <br>
+    <br>
+    Der Wind, der aus den Bergen kommt, er bringt uns Klarheit.
+    <br>           
+    Der Wind, der vom Meer kommt, er bringt uns Freiheit.<br> 
+    Der Wind, der aus der Wüste kommt, er bringt uns Stille.<br>      
+    Der Wind, der aus dem Urwald kommt, er bringt uns Erinnerung.<br>
   </p>
   <br>
   <br>
   <h4 style="font-family: EB Garamond, serif; font-style: italic; color:#d9e1e8; text-align: center;">-Les Choristes-</h4>
   <h3 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Caresse sur l'océan - Bruno Coulais</h3>
   <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large;">
-    Dmitri Schostakowitsch (1906–1975) war eine der prägendsten Figuren des 20. Jahrhunderts. 
-    Unter dem sowjetischen Regime schrieb er Musik voller Zwiespälte: zwischen Anpassung und Widerstand,
-    Ironie und tiefer Trauer. Sein zweites Klavierkonzert entstand 1957 als Geschenk an seinen Sohn Maxim, 
-    der es zu seiner Abschlussprüfung spielte. Anders als viele seiner ernsten Werke ist dieses Konzert
-    insgesamt von heiterem, fast spielerischem Charakter.
-    Das Andante, der Mittelsatz, bildet jedoch das lyrische Herzstück des Werkes.
-     Über einem sanft schreitenden Klavier entfaltet sich eine weit gespannte Melodie,
-      die von den Streichern aufgenommen wird. Die Musik wirkt schlicht und innig,
-       beinahe wie ein romantisches Lied ohne Worte. Gerade diese Einfachheit macht 
-       ihre Wirkung aus: sie vermittelt Ruhe, Wärme und ein Gefühl von persönlicher Nähe.
-        Der Satz ist zu einem der beliebtesten Werke Schostakowitschs geworden und 
-        wird oft auch einzeln aufgeführt. Er zeigt eine Seite des Komponisten, 
-        die von stiller Schönheit geprägt ist – weit entfernt von den grellen Konflikten,
-         die man sonst mit seiner Musik verbindet.
+    Bruno Colais (*1954) ist ein französischer Musiker der seine Ausbildung auf 
+    dem Klavier und der Violine begann und nach seinem anfänglichen Wunsch 
+    zeitgenössische klassische Musik zu komponieren, sich letztlich zu einer 
+    Karriere als Filmkomponist entschied. Als solcher erlangte er große 
+    Bekanntheit und konnte mehrere Auszeichnungen, auch eine Oscar
+    Nominierung errang er. Unter anderem schrieb er die Musik für „Marie Curie“ 
+    sowie für den Film „Die Kinder des Monsieur Mathieu“.
+    <br>
+    Aus letzterem stammt das Lied <i>Caresse sur l’océan</i>, sowie weitere Lieder Colais‘. 
+    Der berühmte Film erzählt die Geschichte eines Musiklehrers, der in einem 
+    Internat für Jungen aus schwierigen Verhältnissen einen Chor gründet. Mit 
+    dem Lied entführt der Film den Zuschauer in eine Welt voller Hoffnung und 
+    Veränderung trotz der düsteren trostlosen Atmosphäre des Internats. Es 
+    zeichnet den Komponisten aus, dass seine Musik auch gelöst vom Film in 
+    seiner Bedeutung nichts verliert. Das Stück symbolisiert den Übergang von der 
+    Kälte des Winters zum Erwachen des Frühlings und thematisiert die Sehnsucht 
+    nach Freiheit. Die sanfte, beruhigende Atmosphäre wird der emotionalen 
+    Kraft der filmischen Vorlage sowie dem Titel des Lieder gerecht: „Sanft weht 
+    ein Hauch überm Meer“. 
   </p>
   <br>
   <br>
   <h3 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">The Seal Lullaby - Eric Whitacre</h3>
   <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large; padding-bottom: 5%;">
-    Eric Whitacre (*1970) ist einer der bekanntesten zeitgenössischen Komponisten für Chor,
-    dessen Werke sich durch üppige Harmonien, schwebende Klangflächen und emotionale Intensität auszeichnen.
-    The Seal Lullaby basiert auf Rudyard Kiplings Geschichte The White Seal und entstand 
-    ursprünglich als Musik für eine geplante Verfilmung, die nie realisiert wurde. Das 
-    Stück ist ein sanftes Wiegenlied, das mit fließenden Linien und schwebenden Akkorden eine ruhige,
-    beruhigende Atmosphäre erzeugt. Whitacres besondere Technik der „Cluster“-Akkorde und des freien 
-    Einsatzes von Rhythmus lässt die Stimmen wie ein lebendiges, atmendes Geflecht klingen. Das Stück 
-    vermittelt Geborgenheit, Wärme und Zuneigung, ohne ins Kitschige zu kippen, und zeigt, wie Whitacre 
-    narrative Tiefe mit reiner Klangmagie verbindet. Hörerinnen und Hörer werden eingeladen, 
-    sich von der Musik tragen zu lassen, in den Klang einzutauchen und die emotionale Wirkung 
-    der Harmonie unmittelbar zu erleben.
+    Eric Whitacre (*1970) ist einer der bekanntesten zeitgenössischen 
+    Komponisten für Chor, dessen Werke sich durch üppige Harmonien, 
+    schwebende Klangflächen und emotionale Intensität auszeichnen. The Seal 
+    Lullaby basiert auf Rudyard Kiplings Geschichte „The White Seal“ und 
+    entstand ursprünglich als Musik für eine geplante Verfilmung, die nie realisiert 
+    wurde. Das Stück ist ein sanftes Wiegenlied, das mit fließenden Linien und 
+    schwebenden Akkorden eine ruhige, beruhigende Atmosphäre erzeugt. 
+    Whitacres besondere Technik der „Cluster“-Akkorde und des freien Einsatzes 
+    von Rhythmus lässt die Stimmen wie ein lebendiges, atmendes Geflecht 
+    klingen. Hörerinnen und Hörer werden eingeladen, sich von der Musik tragen 
+    zu lassen, in den Klang einzutauchen und die emotionale Wirkung der Harmonie unmittelbar zu erleben. Das Stück vermittelt Geborgenheit, Wärme 
+    und Zuneigung, ohne ins Kitschige zu kippen, und zeigt, wie Whitacre 
+    narrative Tiefe mit reiner Klangmagie verbindet: 
+    <br>
+    „Ach, ruhig mein Baby, bald schon bricht der Morgen an.
+    <br>           
+    Noch ist das Wasser schwarz, das am Tag so grün glitzerte.             
+    <br>
+    Der Mond schaut, über schäumenden Wellen, suchend auf uns herab,
+    <br>
+    Wie wir in den rauschenden Wellentälern ruhen.
+    <br>
+    <br>
+    Wo Woge auf Woge trifft, mögest du dein sanftes Ruhekissen finden.
+    <br>
+    Ach, kleines Tierchen, rolle dich ein.
+    <br>
+    Der Sturm möge dich nicht wecken, kein Hai soll über dich herfallen.
+    <br>
+    Schlafe in den Armen der sacht wiegenden See.“ 
   </p>
   <br>
   <br>
-  <h4 style="font-family: EB Garamond, serif; font-style: italic; color:#d9e1e8; text-align: center;">-Ma Mere l'oye-</h4>
-  <h3 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">V. Le Jardin Feerique - Maurice Ravel</h3>
+  <br>
+
+  
+  <h3 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Besetzung</h3>
+  <br>
+  <h5 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Sopran</h5>
+  <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large; padding-bottom: 2%;">
+    Paulina Glöckner, Flavia Götz, Franziska Graf, Maike Kraus, Sara Ribeiro, Leonie Schüttler
+  </p>
+  <h5 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Alt</h5>
+  <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large; padding-bottom: 2%;">
+    Patricia Graf, Gabriele Haunz, Clara Paul, Viviane Spannbauer
+  </p>
+  <h5 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Tenor</h5>
+  <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large; padding-bottom: 2%;">
+    Seweryn Noga, Moritz Walter, Matthias Wodsak
+  </p>
+  <h5 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Bass</h5>
+  <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large; padding-bottom: 2%;">
+    Ruben Ade, Lucas Götz
+  </p>
+  <h5 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Violine</h5>
+  <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large; padding-bottom: 2%;">
+    Gabriele Haunz, Sara Ribeiro, Heike Leuenberger, Lisa Braun
+  </p>
+  <h5 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Viola</h5>
+  <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large; padding-bottom: 2%;">
+    Seweryn Noga, Clemens Nitschke
+  </p>
+  <h5 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Violoncello</h5>
+  <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large; padding-bottom: 2%;">
+    Elisabeth Wäschle, Lucas Götz
+  </p>
+  <h5 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Klavier</h5>
+  <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large; padding-bottom: 2%;">
+    Ruben Ade
+  </p>
+  <h5 style="font-family: EB Garamond, serif; color:#d9e1e8; text-align: center;">Dirigat</h5>
   <p style="font-family: EB Garamond, serif; color: #d9e1e8; text-align: center; margin-left: 20%; margin-right: 20%; font-size: large; padding-bottom: 5%;">
-    Maurice Ravel (1875–1937) gilt als einer der Meister der französischen Impression. 
-    Seine Musik besticht durch klare Strukturen, raffinierte Orchestrierung und leuchtende Klangfarben.
-     Die Suite Ma Mère l’Oye („Mutter Gans“) komponierte Ravel zunächst für Klavier 
-     vierhändig und instrumentierte sie später für Orchester. Das Finale, Le Jardin féerique („Der Feengarten“), 
-     entfaltet eine märchenhafte, schwebende Atmosphäre. Ravel nutzt sanft schwebende Harmonien, 
-     delikate Instrumentalfarben und dynamische Steigerungen, um eine Welt voller Zauber und Leichtigkeit
-      zu erschaffen. Der Zuhörer wird von einem leisen Beginn zu einem funkelnden Höhepunkt getragen, 
-      in dem alle Instrumente zusammenwirken, ohne je die Transparenz zu verlieren. Das Stück 
-      verkörpert Ravels Fähigkeit, Klangfarben poetisch einzusetzen: Man spürt gleichzeitig die 
-      Detailgenauigkeit und die erzählerische Dimension, die jeden Ton lebendig erscheinen lassen.
+    Magnus Götz
   </p>
 </body>
